# histogram-extras

./: .travis.yml  TODO  histogram-extras.cabal  package.yaml  stack.yaml
src/Data/: Annotated.hs  Binned.hs  Dist.hs  Fillable.hs  Folder.hs  Gauss.hs  Hist.hs  MultiFill.hs  Prof.hs  StrictHashMap.hs  StrictIntMap.hs  StrictMap.hs  Weighted.hs
src/Data/Hist/: Internal.hs
src/Data/Histogram/: Extra.hs  Fixed.hs  Instances.hs
src/Data/Histogram/Internal/: TriMat.hs
src/Data/YODA/: Annotated.hs  Dist.hs  Histo.hs  Internal.hs  Obj.hs  Profile.hs
