name: histogram-extras
version: 0.2.1.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: cspollard@gmail.com
synopsis: conveniences for histogram-fill
description:
    conveniences for histogram-fill
category: Data
author: Chris Pollard

source-repository head
    type: git
    location: http://github.com/cspollard/histogram-extras

library
    exposed-modules:
        Data.Annotated
        Data.StrictHashMap
        Data.Hist
        Data.Dist
        Data.Weighted
        Data.Fillable
        Data.YODA.Obj
        Data.Histogram.Bin.Fixed
        Data.Histogram.Bin.Transform
        Data.Histogram.Bin.Arb
        Data.Histogram.Fixed
    build-depends:
        base -any,
        lens -any,
        these -any,
        hashable -any,
        keys -any,
        vector -any,
        text -any,
        cereal -any,
        cereal-text -any,
        unordered-containers -any,
        containers -any,
        vector-th-unbox -any,
        histogram-fill -any,
        histogram-fill-cereal -any,
        linear -any,
        deepseq -any,
        foldl -any,
        cereal-vector -any,
        fixed-vector -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Data.Histogram.Instances
    ghc-options: -Wall
